2004-06-01  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b162

	* Fix: Bug #959948.
	  Thanks to "darkunderdog".

2004-05-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b161

	* Change: Text spacing change in albums.php

	* Change: Extra check in canReadRecursive() to deal with a weird
	  issue that h0bbel found with an orphan.

2004-05-30  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b160

	* Change: GUID needs to be added to new albums on creation, otherwise
	  the RSS is generated with a blank guid field (if no photos have been
	  added to the new album)

2004-05-30  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b159

	* Bug 921262:  Add -trim to jpegtran rotation options to prevent
	  artifacting when images don't match the "normal" dimensions

	* Bug 852395:  If the user navigates to a new album while editing 
	  captions, throw an error and abort changes.  This *could* be adapted
	  to just load the correct album, however if they've navigated, we
	  don't know if they have modified that album or not.

2004-05-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b158

	* Change: Better detection of which pubDate to use for RSS feeds

	* Change: Implement canReadRecurse() in search.php - you now
	  cannot search for any album which you can not directly link to
	  from an albums page.

	* Change: Flag 'autoRotated' after manual rotation to prevent this:
	  Use has autorotate disabled.  Uploads a photo.  Manually rotates
	  it to proper orientation.  Later enables autorotate.  Moves photo.
	  ... if autoRotate isn't flagged, the move will cause autorotate to
	  rotate it, even though it was done manually.

2004-05-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b157

	* Change: Text fix for RSS option in config_data

2004-05-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b156

	* Change: Add "canReadRecurse" to Album - use canReadRecurse in RSS feed