@@ -61,7 +61,7 @@ class Album {
 		$this->fields["fit_to_window"] = $gallery->app->default["fit_to_window"];
 		$this->fields["use_fullOnly"] = $gallery->app->default["use_fullOnly"];
 		$this->fields["print_photos"] = $gallery->app->default["print_photos"];
-		$this->fields["guid"] = md5(uniqid(rand(), true));
+		$this->fields["guid"] = 0;
 		if (isset($gallery->app->use_exif)) {
 			$this->fields["use_exif"] = "yes";
 		} else {
