@@ -1,3 +1,10 @@
+2004-05-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b163
+
+	* Change: Move guid generation explicitly to album creation, and
+	  photo add/delete to save processing time.
+
+	* Change: Correct photo count on albums.php to not include albums
+
 2004-06-01  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b162
 
 	* Fix: Bug #959948.
